--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,6 @@ axum = "0.5.9"
 serde = "1.0.137"
 mongodb = "2.2.2"
 askama = "0.11.1"
+tower = {version = "0.4.13", features = ["full"] }
 tower-http = { version = "0.3.4", features = ["full"] }
 tokio = { version = "1.19.2", features = ["full"] }
