--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ license = "MIT"
 edition = "2021"
 
 [dependencies]
-toml = "0.5.9"
 rand = "0.8.5"
 axum = "0.5.9"
 serde = "1.0.137"
 mongodb = "2.2.2"
 askama = "0.11.1"
+dotenv = "0.15.0"
 tower = {version = "0.4.13", features = ["full"] }
 tower-http = { version = "0.3.4", features = ["full"] }
 tokio = { version = "1.19.2", features = ["full"] }
