--- a/example.env
+++ b/example.env
@@ -3,3 +3,4 @@ MONGO_PASSWORD = "Your mongo password"
 MONGO_CLUSTER = "Your cluster name"
 DATABASE_NAME = "Your database name"
 COLLECTION_NAME = "Your collection name"
+PORT = "the port to listen on"
