--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,13 @@
 {
     "rust-analyzer.diagnostics.disabled": [
         "unresolved-proc-macro"
-    ]
+    ],
+    "editor.semanticTokenColorCustomizations": {
+        "enabled": true,
+        "rules": {
+            "*.mutable": {
+                "underline": false,
+            },
+        }
+    }
 }
